Increase size of benefits container to fix image covering end of text on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -666,7 +666,7 @@ fieldset {
     }
 
     #hiking-benefits {
-        height: 1500px;
+        height: 1650px;
     }
 
     #benefits-text div {
